# WeThePeopleAudit

./: .gitignore  LICENSE  NOTES.md  README.md
backend/: pyproject.toml  requirements.txt  setup.py
backend/data_cleaning/: bill_data_cleaning.py  reorganize_data.py  spending_cleaning.ipynb
backend/data_cleaning/.ipynb_checkpoints/: spending_cleaning-checkpoint.ipynb
backend/data_ingestion/: exploratory.ipynb  ingest.py  ingest_bills.py  ingest_performance.py  ingest_spending.py  inget_spending.py  injest.py  unz.py  unzip.py  unzip_upload.py  upload_to_s3.py
backend/data_processing/: flatten_bills.py  flatten_spending.py  transform_geo.py  transform_performance.py  unzip_process_bill_data.py
frontend/assets/: index.css  index.html  script.js
notebooks/: bill.csv  brandon_mapping.py  covote_edges.csv  covote_nodes.csv  exploratory.ipynb  how_many_rows.ipynb  people.csv  politician_bill_links.csv  test_mapping.ipynb  votes.csv
scripts/: Merged_clean_up.py  README  Split_merged.py  data_readding.py  spending_assignment.ipynb  spending_cleaning.ipynb
scripts/District_Assignment/: district_assignment.py  readme.txt
scripts/Spending_Data_processing/: data_linking_spending_plus_politician.py
